k8s/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: drawtogether
  namespace: drawtogether
  labels:
    app: drawtogether
spec:
  serviceName: drawtogether
  replicas: 3
  selector:
    matchLabels:
      app: drawtogether
  template:
    metadata:
      labels:
        app: drawtogether
        cluster: drawtogether
    spec:
      serviceAccountName: drawtogether
      terminationGracePeriodSeconds: 35
      containers:
      - name: pbm-sidecar
        image: petabridge/pbm:latest #sidecar
      - name: drawtogether-app
        image: drawtogether
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        ports:
          - containerPort: 8558
            protocol: TCP
            name: management
          - containerPort: 5055
            protocol: TCP
            name: akka-remote
          - containerPort: 8080
            protocol: TCP
            name: http
        volumeMounts:
        - name: tls-cert
          mountPath: /certs
          readOnly: true
      volumes:
      - name: tls-cert
        secret:
          secretName: akka-tls-cert
