k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drawtogether
  namespace: drawtogether
  labels:
    app: drawtogether
spec:
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
    - port: 8558
      name: management
    - port: 5055
      name: akka-remote
    - port: 8080
      name: http
  selector:
    app: drawtogether
