k8s/base/sql-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
  namespace: drawtogether
spec:
  ports:
    - name: sqlserver
      port: 1644
      protocol: TCP
      targetPort: 1433
  selector:
    app: sqlserver
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
  namespace: drawtogether
  labels:
    app: sqlserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
      - name: sqlserver
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
          name: sqlserver
