k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drawtogether-localhost
  namespace: drawtogether
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Updated annotation
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
  - host: drawtogether.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drawtogether
            port:
              number: 8080
