k8s/base/k8s-web-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drawtogether-localhost
  namespace: drawtogether
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Updated annotation
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
  - host: drawtogether.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drawtogether
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: drawtogether
  namespace: drawtogether
  labels:
    app: drawtogether
spec:
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
    - port: 8558
      name: management
    - port: 5055
      name: akka-remote
    - port: 8080
      name: http
  selector:
    app: drawtogether
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: drawtogether
  namespace: drawtogether
  labels:
    app: drawtogether
spec:
  serviceName: drawtogether
  replicas: 3
  selector:
    matchLabels:
      app: drawtogether
  template:
    metadata:
      labels:
        app: drawtogether
        cluster: drawtogether
    spec:
      serviceAccountName: drawtogether
      terminationGracePeriodSeconds: 35
      containers:
      - name: pbm-sidecar
        image: petabridge/pbm:latest #sidecar
      - name: drawtogether-app
        image: drawtogether
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        ports:
          - containerPort: 8558
            protocol: TCP
            name: management
          - containerPort: 5055
            protocol: TCP
            name: akka-remote
          - containerPort: 8080
            protocol: TCP
            name: http
        volumeMounts:
        - name: tls-cert
          mountPath: /certs
          readOnly: true
      volumes:
      - name: tls-cert
        secret:
          secretName: akka-tls-cert
